; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/gap/extr_gap_conn.c_gap_allocate_ccb.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/gap/extr_gap_conn.c_gap_allocate_ccb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i64, i32, i64, i8*, i8* }

@gap_cb = common dso_local global %struct.TYPE_8__ zeroinitializer, align 8
@GAP_MAX_CONNECTIONS = common dso_local global i64 0, align 8
@GAP_CCB_STATE_IDLE = common dso_local global i64 0, align 8
@QUEUE_SIZE_MAX = common dso_local global i32 0, align 4
@L2CAP_MTU_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_7__* ()* @gap_allocate_ccb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_7__* @gap_allocate_ccb() #0 {
  %1 = alloca %struct.TYPE_7__*, align 8
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_7__*, align 8
  store i64 0, i64* %2, align 8
  %4 = load %struct.TYPE_7__*, %struct.TYPE_7__** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @gap_cb, i32 0, i32 0, i32 0), align 8
  store %struct.TYPE_7__* %4, %struct.TYPE_7__** %3, align 8
  br label %5

5:                                                ; preds = %34, %0
  %6 = load i64, i64* %2, align 8
  %7 = load i64, i64* @GAP_MAX_CONNECTIONS, align 8
  %8 = icmp slt i64 %6, %7
  br i1 %8, label %9, label %39

9:                                                ; preds = %5
  %10 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @GAP_CCB_STATE_IDLE, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %33

15:                                               ; preds = %9
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %17 = call i32 @memset(%struct.TYPE_7__* %16, i32 0, i32 40)
  %18 = load i32, i32* @QUEUE_SIZE_MAX, align 4
  %19 = call i8* @fixed_queue_new(i32 %18)
  %20 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %20, i32 0, i32 4
  store i8* %19, i8** %21, align 8
  %22 = load i32, i32* @QUEUE_SIZE_MAX, align 4
  %23 = call i8* @fixed_queue_new(i32 %22)
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %24, i32 0, i32 3
  store i8* %23, i8** %25, align 8
  %26 = load i64, i64* %2, align 8
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 2
  store i64 %26, i64* %28, align 8
  %29 = load i32, i32* @L2CAP_MTU_SIZE, align 4
  %30 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %31 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %30, i32 0, i32 1
  store i32 %29, i32* %31, align 8
  %32 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  store %struct.TYPE_7__* %32, %struct.TYPE_7__** %1, align 8
  br label %40

33:                                               ; preds = %9
  br label %34

34:                                               ; preds = %33
  %35 = load i64, i64* %2, align 8
  %36 = add nsw i64 %35, 1
  store i64 %36, i64* %2, align 8
  %37 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %38 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %37, i32 1
  store %struct.TYPE_7__* %38, %struct.TYPE_7__** %3, align 8
  br label %5

39:                                               ; preds = %5
  store %struct.TYPE_7__* null, %struct.TYPE_7__** %1, align 8
  br label %40

40:                                               ; preds = %39, %15
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  ret %struct.TYPE_7__* %41
}

declare dso_local i32 @memset(%struct.TYPE_7__*, i32, i32) #1

declare dso_local i8* @fixed_queue_new(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
